fix too big correct answer container

--- a/arabic-version/style.css
+++ b/arabic-version/style.css
@@ -238,14 +238,14 @@ h2 {
 }
 
 #correct-answer-container h3 {
-    margin-top: 30px;
+    margin-top: 20px;
     margin-bottom: 10px;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     font-weight: 600;
 }
 
 #correct-answer-container p {
-    font-size: 1.3rem;
+    font-size: 1rem;
     font-weight: 300;
     color: inherit;
 }
